Remove depricated "new URL(..)",